Update personal details

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header container">
-        <div class="photo-block">
+        <div class="block">
             <img class="mainImg" src="./images/Original.jpg" alt="Photo">
             <div class="info-block">
                 <div class="name">MD. ASHIKUR RAHMAN</div>
@@ -24,7 +24,20 @@
         
     </div>
 
-    <div class="personal-info container"></div>
+    <div class="personal-info container">
+        <div class="block">
+            <div class="personal-info-headings">Personal Details</div>
+            <div class="personal-info-elements">
+                <ul>
+                    <li>Date of Birth : &nbsp&nbsp&nbsp&nbsp 12th March, 1994 </li>
+                    <li>Hometown : &nbsp&nbsp&nbsp&nbsp Barishal</li>
+                    <li>Religion : &nbsp&nbsp&nbsp&nbsp Islam</li>
+                    <li>Height : &nbsp&nbsp&nbsp&nbsp 5 ft. 7 in. </li>
+                    <li>Blood Group : &nbsp&nbsp&nbsp&nbsp B+</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <div class="family-info container"></div>
 
