Update Personal info

--- a/index.html
+++ b/index.html
@@ -33,7 +33,34 @@
                     <li>Hometown : &nbsp&nbsp&nbsp&nbsp Barishal</li>
                     <li>Religion : &nbsp&nbsp&nbsp&nbsp Islam</li>
                     <li>Height : &nbsp&nbsp&nbsp&nbsp 5 ft. 7 in. </li>
+                    <li>Weight : &nbsp&nbsp&nbsp&nbsp 60 kg</li>
                     <li>Blood Group : &nbsp&nbsp&nbsp&nbsp B+</li>
+                </ul>
+            </div>
+            <div class="personal-info-headings">Education</div>
+            <div class="personal-info-elements">
+                <ul>
+                    <li> <b> BSc in Petroleum and Mining Engineering <br>
+                        2nd Major in Computer Science and Engineering <br>
+                    </b>Shahjalal University of Science and Technology
+                    </li>
+                    <li> 
+                        <b>HSC
+                        </b> <br> Adamjee Cantonment College
+                    </li>
+                    <li> 
+                        <b>SSC
+                        </b> <br> Jalalabad Cantonment Public School and College
+                    </li>
+                </ul>
+            </div>
+            <div class="personal-info-headings">Occupation</div>
+            <div class="personal-info-elements">
+                <ul>
+                    <li> <b>Game Developer<br>
+                    </b>(Gameplay Programmer)
+                    </li>
+                    <li> Learning <b>MERN stack Development</b></li>
                 </ul>
             </div>
         </div>
