Update family details

--- a/index.html
+++ b/index.html
@@ -66,8 +66,24 @@
         </div>
     </div>
 
-    <div class="family-info container"></div>
+    <div class="family-info container">
+        <div class="block">
+            <div class="personal-info-headings">Family Details</div>
+            <div class="personal-info-elements">
+                <ul>
+                    <li>Father's Name : &nbsp&nbsp&nbsp&nbsp Md. Mokhlesur Rahman </li>
+                    <li>Mother's Name : &nbsp&nbsp&nbsp&nbsp Umme Ruma</li>
+                    <li>Brother's Name : &nbsp&nbsp&nbsp&nbsp Shibli Rahman</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-    <div class="thankYou container"></div>
+    <div class="thankYou container"> 
+        <div class="block">
+            <div>Thank You!!</div>
+            <div> &#128526 </div>
+        </div>
+    </div>
 </body>
 </html>
